--- a/frontend/src/app/admin/orders/orders.component.html
+++ b/frontend/src/app/admin/orders/orders.component.html
@@ -1,1 +1,13 @@
-<p>orders works!</p>
+<div *ngFor="let eachOrder of orderList">
+	<span>{{ eachOrder.customer_name }}</span>
+	<span> - </span>
+	<span>{{ eachOrder.contact }}</span>
+	<span> - </span>
+	<span>{{ eachOrder.delivery_address }}</span>
+	<span> - </span>
+	<span>{{ eachOrder.name }}</span>
+	<span> - </span>
+	<span>{{ eachOrder.price }}</span>
+	<span> - </span>
+	<span>{{ eachOrder.purchased_date }}</span>
+</div>
