Table Design Added

--- a/frontend/src/app/layout/navbar/navbar.component.html
+++ b/frontend/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
 	<div class="navbar__title">
-		<a class="navbar__link" href="/">E Commerce Site</a>
+		<a class="navbar__link" href="/">Site</a>
 	</div>
 	
 	<div *ngIf="userRole === 'admin'" class="navbar__navlinks">
