--- a/frontend/src/app/client/cart/cart.component.css
+++ b/frontend/src/app/client/cart/cart.component.css
@@ -6,10 +6,11 @@
 }
 
 .order__box{
-	margin-top: 2rem;
+	margin: 2rem 0;
 	padding: 1rem;
-	height: 10rem;
-	width: 50rem;
+	min-height: 10rem;
+	height: max-content;
+	width: 40rem;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
 	border-radius: 0.3rem;
 }
@@ -17,4 +18,57 @@
 .order__link{
 	text-decoration: none;
 	color: black;
+}
+
+.cart-table__wrapper{
+	display: flex;
+	flex-direction: column;
+}
+
+.cart-table__item-wrapper{
+	display: flex;
+	text-align: center;
+	padding: 0.5rem 0;
+}
+
+.cart-table__items{
+	flex: 1;
+	line-height: 2.5rem;
+}
+
+.cart-table__head{
+	background-color: rgb(4, 109, 170);
+	color: white;
+	height: 3rem;
+	line-height: 2rem;
+	width: 100%;
+}
+
+.cart-table__btn{
+	border: none;
+	outline: none;
+	background: rgb(226, 67, 67);
+	color: white;
+	padding: 0.5rem 1rem;
+	border-radius: 0.2rem;
+	cursor: pointer;
+}
+
+.cart-table__btn:hover{
+	background: rgb(192, 34, 34);
+}
+
+.cart-table__checkout-btn{
+	border: none;
+	outline: none;
+	width: 100%;
+	height: 2.5rem;
+	background-color: rgb(4, 155, 79);
+	color: white;
+	border-radius: 0.3rem;
+	cursor: pointer;
+}
+
+.cart-table__checkout-btn:hover{
+	background-color: rgb(1, 129, 65);
 }
