--- a/frontend/src/app/client/cart/cart.component.html
+++ b/frontend/src/app/client/cart/cart.component.html
@@ -1,13 +1,28 @@
 <div class="order__wrapper">
   <div class="order__box">
-    <div *ngFor="let eachOrder of orderList">
-      <div>{{ eachOrder.name }} - {{ eachOrder.price }}</div>
-    </div>
-	<a class="order__link" *ngIf="loggedIn === false" href="user/login">
-		<button>Checkout</button>
-	</a>
-	<a class="order__link" *ngIf="loggedIn === true" href="user/checkout">
-		<button>Checkout</button>
-	</a>
+    <table class="cart-table__wrapper">
+      <thead class="cart-table__head">
+        <tr class="cart-table__item-wrapper">
+          <th class="cart-table__items">Product Name</th>
+          <th class="cart-table__items">Product Price</th>
+          <th class="cart-table__items">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="cart-table__item-wrapper" *ngFor="let eachOrder of orderList">
+          <td class="cart-table__items">{{ eachOrder.name }}</td>
+          <td class="cart-table__items">{{ eachOrder.price }}</td>
+		  <td class="cart-table__items">
+			<button class="cart-table__btn" (click)="removeFromCart(eachOrder.id)">Remove</button>
+		  </td>
+        </tr>
+		<tr class="cart-table__item-wrapper">
+			<td class="cart-table__items">Total</td>
+			<td class="cart-table__items">{{ totalAmount }} Taka</td>
+			<td class="cart-table__items"></td>
+		</tr>
+      </tbody>
+    </table>
+	<button class="cart-table__checkout-btn" (click)="nextPage()">Checkout</button>
   </div>
 </div>
