--- a/frontend/src/app/layout/navbar/navbar.component.css
+++ b/frontend/src/app/layout/navbar/navbar.component.css
@@ -1,12 +1,11 @@
-.navbar{
+.navbar__wrapper{
 	height: 4rem;
 	width: calc(100vw - 2rem);
-	background-color: rgb(4, 109, 170);
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	background-color: #e05c0b;
 	padding: 0 1rem;
 	color: white;
+	display: flex;
+	align-items: center;
 }
 
 .navbar__title{
@@ -31,10 +30,76 @@
 }
 
 .navbar__link-wrapper:hover .navbar__link{
-	color: rgb(4, 109, 170);
+	color: #e05c0b;
 }
 
 .navbar__navlinks{
 	display: flex;
 	gap: 0.5rem;
+}
+
+ul{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar__items{
+	display: flex;
+	justify-content: space-evenly;
+	gap: 2rem;
+	list-style: none;
+	margin: 0 4.5rem;
+	width: 100%;
+}
+
+.navbar__item{
+	padding: 1rem;
+	line-height: 4rem;
+}
+
+.navbar__dropdown-icon{
+	font-weight: 1000;
+	font-size: large;
+}
+
+.navbar__item:hover{
+	background-color: white;
+	color: #e05c0b;
+	cursor: pointer;
+}
+
+.navbar__dropdown-title{
+	position: relative;
+}
+
+.navbar__dropdown-wrapper{
+	display: none;
+	position: absolute;
+	top: 1;
+	left: 0;
+	min-height: max-content;
+	min-width: max-content;
+	list-style: none;
+	padding: 1rem;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
+}
+
+.navbar__dropdown-title:hover .navbar__dropdown-wrapper{
+	line-height: normal;
+	display: block;
+}
+
+.navbar__dropdown-items{
+	margin: 0;
+	padding: 0.5rem 0;
+	width: 100%;
+}
+
+.navbar__dropdown-labels{
+	padding: 0.5rem;
+}
+
+.navbar__dropdown-items:hover{
+	background-color: #e05c0b;
+	color: white;
 }
