--- a/frontend/src/app/client/latest-products/latest-products.component.html
+++ b/frontend/src/app/client/latest-products/latest-products.component.html
@@ -1,1 +1,6 @@
-<p>latest-products works!</p>
+<div class="latest-products__header-wrapper">
+	<div class="latest-products__header-bar"></div>
+	<div class="latest-products__header-title">Latest Products</div>
+	<div class="latest-products__header-bar"></div>
+</div>
+<app-product-list></app-product-list>
