--- a/frontend/src/app/layout/navbar/navbar.component.css
+++ b/frontend/src/app/layout/navbar/navbar.component.css
@@ -81,6 +81,7 @@ ul{
 	min-width: max-content;
 	list-style: none;
 	padding: 1rem;
+	background-color: #fff;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
 }
 
