Image Preview on Client Side

--- a/frontend/src/app/client/product-details-page/product-details-page.component.html
+++ b/frontend/src/app/client/product-details-page/product-details-page.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="product-preview__details">
   <div class="product-preview__col-1">
-    <img class="product-preview__img" src="assets/images/product-icon.png" alt="Product Icon">
+    <img class="product-preview__img" [src]="imgUrl" alt="Product Image">
     <div class="product-preview__btn-group">
       <button class="product-preview__btn">Order Delivery</button>
       <button class="product-preview__btn">Add To Cart</button>
