--- a/frontend/src/app/client/product-list/product-list.component.html
+++ b/frontend/src/app/client/product-list/product-list.component.html
@@ -3,7 +3,7 @@
     <div class="product-list__img-wrapper">
       <img
         class="product-list__img"
-        src="assets/images/product-icon.png"
+        [src]="eachProduct.product_img"
         alt="Product Icon"
       />
     </div>
