--- a/frontend/src/app/admin/orders/orders.component.html
+++ b/frontend/src/app/admin/orders/orders.component.html
@@ -1,5 +1,6 @@
 <div class="order__wrapper">
   <div class="order__box">
+    <h3 class="order__title">Welcome Admin ! <a href="admin/products">Product List</a></h3>
     <table class="order-table__wrapper">
       <thead class="order-table__head">
         <tr class="order-table__item-wrapper">
