--- a/frontend/src/app/admin/products/products.component.html
+++ b/frontend/src/app/admin/products/products.component.html
@@ -1,49 +1,99 @@
-<div>
-	<h1>Products</h1>
+<div class="product__wrapper">
+  <h1>Products</h1>
 
-	<form>
-		<input
-      type="text"
-      autocomplete="off"
-      placeholder="Product Name"
-      name="userTypedProductName"
-      [(ngModel)]="userTypedProductName"
-      >
+  <div class="product__container">
+    <form>
+      <div class="product__form-input-wrapper">
       <input
-      type="text"
-      autocomplete="off"
-      placeholder="Product Price"
-      name="userTypedProductPrice"
-      [(ngModel)]="userTypedProductPrice"
-      >
+        type="text"
+        class="product__form-input"
+        autocomplete="off"
+        placeholder="Product Name"
+        name="userTypedProductName"
+        [(ngModel)]="userTypedProductName"
+      />
       <input
-      type="text"
-      autocomplete="off"
-      placeholder="Product Stock"
-      name="userTypedProductStock"
-      [(ngModel)]="userTypedProductStock"
-    >
-    <input
-      type="file"
-      name="product_img"
-      accept="image/*"
-      [(ngModel)]="productImageFile"
-      (change)="getProductImageDetails($event)"
-    >
-		<button type="submit" *ngIf="updateStatus == false" (click)="addProduct()">Add</button>
-		<button type="submit" *ngIf="updateStatus == true" (click)="updateProduct()">Update</button>
-	</form>
+        type="text"
+        class="product__form-input"
+        autocomplete="off"
+        placeholder="Product Price"
+        name="userTypedProductPrice"
+        [(ngModel)]="userTypedProductPrice"
+      />
+      <input
+        type="text"
+        class="product__form-input"
+        autocomplete="off"
+        placeholder="Product Stock"
+        name="userTypedProductStock"
+        [(ngModel)]="userTypedProductStock"
+      />
+    </div>
+      <input
+        type="file"
+        name="product_img"
+        accept="image/*"
+        [(ngModel)]="productImageFile"
+        (change)="getProductImageDetails($event)"
+      />
+      <button
+        class="product__btn product__btn-add"
+        type="submit"
+        *ngIf="updateStatus == false"
+        (click)="addProduct()"
+      >
+        Add
+      </button>
+      <button
+        class="product__btn product__btn-update"
+        type="submit"
+        *ngIf="updateStatus == true"
+        (click)="updateProduct()"
+      >
+        Update
+      </button>
+    </form>
+  </div>
 
-	<div *ngFor="let eachProduct of productList">
-		<span>{{ eachProduct.name }}</span>
-		<span>-</span>
-		<span>{{ eachProduct.price }}</span>
-		<span>-</span>
-		<span>{{ eachProduct.stock }}</span>
-		<button (click)="changeUpdateStatus(eachProduct)">Edit</button>
-		<button (click)="deleteProduct(eachProduct.id)">Delete</button>
-	</div>
+  <div class="order__wrapper">
+    <div class="order__box">
+  <table class="checkout-table__wrapper">
+    <thead class="checkout-table__head">
+      <tr class="checkout-table__item-wrapper">
+        <th class="checkout-table__items">Product Name</th>
+        <th class="checkout-table__items">Product Price</th>
+        <th class="checkout-table__items">Product Stock</th>
+        <th class="checkout-table__items">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr
+        class="checkout-table__item-wrapper"
+        *ngFor="let eachProduct of productList"
+      >
+        <td class="checkout-table__items">{{ eachProduct.name }}</td>
+        <td class="checkout-table__items">{{ eachProduct.price }}</td>
+        <td class="checkout-table__items">{{ eachProduct.stock }}</td>
+        <td class="checkout-table__items">
+          <button class="product__btn-edit" (click)="changeUpdateStatus(eachProduct)">Edit</button>
+          {{" "}}
+          <button class="product__btn-delete" (click)="deleteProduct(eachProduct.id)">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-  <br>
-  <br>
+  <!-- <div *ngFor="let eachProduct of productList">
+    <span>{{ eachProduct.name }}</span>
+    <span>-</span>
+    <span>{{ eachProduct.price }}</span>
+    <span>-</span>
+    <span>{{ eachProduct.stock }}</span>
+    <button (click)="changeUpdateStatus(eachProduct)">Edit</button>
+    <button (click)="deleteProduct(eachProduct.id)">Delete</button>
+  </div> -->
+
+  <br />
+  <br />
 </div>
